--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,19 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @course.title %>
-</p>
-
-<p>
-  <strong>File:</strong>
-  <%= @course.file %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @course.content %>
-</p>
-
-<%= link_to 'Edit', edit_course_path(@course) %> |
-<%= link_to 'Back', courses_path %>
+<%= render('course_card') %>
